--- a/web-client/templates/chats.html
+++ b/web-client/templates/chats.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../templates/css/style.css">
-    <link rel="stylesheet" href="../templates//css/adapt.css">
+    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="../static/css/adapt.css">
 
 
     <title>MessageCenter | Чаты </title>
@@ -17,7 +17,7 @@
 
             <!-- .navpanel и .null появляется при width экрана 885px и меньше -->
             <div class="navpanel">
-                <img class="arrow" src="../templates/css/arrow.svg" alt="">
+                <img class="arrow" src="../static/css/arrow.svg" alt="">
             </div>
             
             <!-- нужен для нормального отступа при адаптации -->
@@ -81,6 +81,6 @@
 
     </div>
 
-    <script src="../templates/js/script.js"></script>
+    <script src="../static/js/script.js"></script>
 </body>
 </html>
