--- a/web-client/templates/index.html
+++ b/web-client/templates/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../templates/css/style.css">
-    <link rel="stylesheet" href="../templates/css/adapt.css">
+    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="../static/css/adapt.css">
     <title>MessageCenter</title>
 </head>
 
