--- a/web-client/templates/chats/body.html
+++ b/web-client/templates/chats/body.html
@@ -2,5 +2,5 @@
     <div class="wrapper ">
         <!-- тут содержиться .sidebar и .messanger-->
     </div>
-    <script src="../static/js/script.js"></script>
+    <script src="../../static/js/script.js"></script>
 </body>
