--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -6,447 +6,25 @@
   font-family: "Nunito", sans-serif;
 }
 
-.__center {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.__row {
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-}
-
-.__none {
-  display: none;
-}
-
-.__hidde {
-  display: none;
-}
-
-/* наше сообщение */
-.__me {
-  background-color: #ffffff;
-  border: 2px solid #b3b3b3;
-  border-radius: 20px;
-  border-bottom-right-radius: 0px;
-  margin-left: auto;
-}
-
-/* чужое сообщение */
-.__other {
-  background-color: #83f3ae;
-  border: 2px solid #a6a6a6;
-  border-radius: 20px;
-  border-bottom-left-radius: 0px;
-  margin-right: auto;
-}
-
-/* Блок для адаптации
-   Появляется при width 885  и меньше
-*/
-.null {
-  display: none;
-  height: 50px;
-}
-
+html,
 body {
-  background-color: #e4e0e0;
+  height: 100%;
+  background-color: #161616;
 }
 
 .wrapper {
-  width: 100vw;
-  height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  justify-content: center;
+  align-items: center;
 }
 
-/* index.html */
+.signin {
 
-form {
-  width: 800px;
-  height: 90%;
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background-color: #2ea7ee;
-  border-radius: 40px;
-  margin: 40px;
-}
+  width: 650px;
+  height: 650px;
 
-.main-form {
-  width: 80%;
-  height: 80%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-.main-form .setinfo {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  margin-bottom: 50px;
-}
-.main-form .setinfo label {
-  font-size: 30px;
-  color: #bcc2f7;
-}
-.main-form .setinfo input {
-  width: 250px;
-  height: 40px;
-  outline: none !important;
-  background-color: #e4e0e0;
-  border: 3px solid #bcc2f7;
+  border: 4px #363636 solid;
   border-radius: 10px;
-  color: #2ea7ee;
-  font-size: 20px;
-}
-.main-form button {
-  width: 200px;
-  height: 70px;
-  font-size: 40px;
-  font-weight: 800;
-  color: #2ea7ee;
-  background-color: #e4e0e0;
-  border-radius: 20px;
-  border: 1px solid #e4e0e0;
-}
-
-
-/* chats.html */ 
-
-/* Левая панель  */
-.sidebar {
-  width: 30%;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  padding: 10px;
-  background-color: #59ade6;
-  margin-right: 30px;
-  overflow: auto;
-  direction: rtl;       /* отпражаем её, чтоб скролл был слева  */
-  overflow-x: hidden;   /* убираем нижний скролл  */
-  scrollbar-width: auto;
-  scrollbar-color: #59ade6 white;
-}
-.sidebar ::-webkit-scrollbar {
-  width: 40px;
-}
-/* Стили для .nochat */
-.sidebar .nochat {
-  width: 100%;
-  height: 70px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background-color: #ee2e68;
-  border-radius: 10px;
-  color: white;
-  font-size: 20px;
-  font-weight: 700;
-  margin-bottom: 10px;
-}
-
-/* стили для .chat */
-.sidebar .chat {
-  direction: ltr; /* Отражаем содержимое чтоб оно небыло отзеркалено из-за rtl в .sidebar*/
-  width: 100%;
-  height: 80px;
-  cursor: pointer;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background-color: #5c8cd4;
-  border-radius: 10px;
-  border: 1px solid #5c8cd4;
-  color: white;
-  font-size: 20px;
-  margin-bottom: 10px;
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
-}
-
-/* стили при наведении на .chat */
-.sidebar .chat:hover {
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
-  height: 90px;
-  border: 1px solid white;
-  margin-right: -10px;
-}
-
-/* стили .user-info */
-.sidebar .chat .user-info {
-  width: 90%;
-  height: 100%;
-  position: relative;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  margin-left: 10px;
-  color: #fff;
-}
-
-/* стили .name */
-.sidebar .chat .user-info .name {
-  font-weight: 700;
-  margin-bottom: 10px;
-}
-
-/* стили .last-msg */
-.sidebar .chat .user-info .last-msg {
-  width: 200px;
-  padding: 10px;
-  white-space: nowrap;
-  overflow: hidden;
-  font-size: 14px;
-  text-overflow: ellipsis;
-  background-color: #4ebeb0;
-}
-
-/* Стили кружоча .new-msg */
-.sidebar .chat .new-msg {
-  width: 25px;
-  height: 25px;
-  background-color: white;
-  border-radius: 50%;
-}
-
-/* Стили правой части сайта */
-.messanger {
-  width: 70%;
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-/* Стили блока с чатом */
-.messanger .main {
-  width: 90%;
-  height: 90%;
-  display: none;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  background-color: #59abee;
-  border-radius: 20px;
-  padding: 20px;
-  margin: 20px;
-}
-
-/* Стили с блоком ввода текста и кнопкой  */
-.messanger .main .send-message {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-top: 10px;
-}
-/* стили ввода текста .input-messange  */
-.messanger .main .send-message .input-message {
-  outline: none !important; /* убираем обводку браузера при вводе текста*/
-  resize: none;
-  margin-top: auto;
-  width: 90%;
-  height: 60px;
-  border: 1px solid #458ad8;
-  border-radius: 10px;
-  scrollbar-width: thin;
-  scrollbar-color: #59ade6 white;
-  background-color: #458ad8;
-  color: white;
-  padding: 10px;
-  font-size: 20px;
-}
-
-/* кнопка отправки сообщения */
-.messanger .main .send-message button {
-  width: 70px;
-  height: 70px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-left: 20px;
-  color: black;
-  font-size: 40px;
-  font-weight: 900;
-  background-color: white;
-  border: 1px solid white;
-  border-radius: 30px;
-}
-/* стили кнопки отправки при её нажатии */
-.messanger .main .send-message button:active {
-  background-color: #cccccc;
-  border: 1px solid #cccccc;
-  color: #2ea7ee;
-}
-
-/* блок со сообщениями  */
-.msgs {
-  height: 90%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  border-radius: 10px;
-  overflow-y: auto;
-  background-color: rgb(163, 207, 228);
-  padding: 10px;
-}
-/* стили для самих сообщений
-   конкретные стилии для сообщений .__me и .__other - они в самом верху
-*/
-.msgs .message {
-  width: 46%;
-  font-size: 16px;
-  font-weight: 500;
-  padding: 10px;
-  margin-bottom: 10px;
-}
-
-/* стили декоративных блоков в index.html */
-.form-left-decoration, .form-right-decoration {
-  position: absolute;
-  width: 70px;
-  height: 30px;
-  background: #e4e0e0;
-  border-radius: 20px;
-}
-
-.form-left-decoration {
-  bottom: 60px;
-  left: -30px;
-}
-.form-left-decoration::after {
-  content: "";
-  position: absolute;
-  width: 110px;
-  height: 30px;
-  background-color: #2ea7ee;
-  border-radius: 20px;
-  top: 30px;
-  right: 10px;
-}
-.form-left-decoration::before {
-  content: "";
-  position: absolute;
-  width: 70px;
-  height: 30px;
-  background-color: #2ea7ee;
-  border-radius: 20px;
-  bottom: 30px;
-}
-
-.form-right-decoration {
-  top: 80px;
-  right: -30px;
-}
-.form-right-decoration::after {
-  content: "";
-  position: absolute;
-  width: 90px;
-  height: 30px;
-  background-color: #2ea7ee;
-  border-radius: 20px;
-  top: 30px;
-}
-.form-right-decoration::before {
-  content: "";
-  position: absolute;
-  width: 70px;
-  height: 30px;
-  background-color: #2ea7ee;
-  border-radius: 20px;
-  bottom: 30px;
-}
-
-.circle {
-  width: 40px;
-  height: 40px;
-  position: absolute;
-  background-color: #e4e0e0;
-  border-radius: 100px;
-  top: 0;
-  left: 0;
-  margin: 20px;
-}
-
-/* стили панели навигации, появляется во время адаптации */
-.navpanel {
-  display: none;
-  width: 100%;
-  height: 40px;
-  margin-bottom: 20px;
-  background-color: #0084ff;
-}
-/* стили стрелки панели */
-.navpanel .arrow {
-  display: none;
 }
