--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="../static/css/signin.css">
 
     <!-- Axios CDN -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
@@ -18,7 +18,11 @@
 
         <div class="signin">
 
-             
+            <h3>Введите пароль</h3>
+            
+            <input class="setpass" type="password" placeholder="Пароль">
+
+            <div class="btn">Войти</div>
         </div>
 
 
