--- a/web/templates/chats.html
+++ b/web/templates/chats.html
@@ -41,7 +41,14 @@
                 <div class="message-block">
 
                     <div class="messanger-main">
+                        <div class="message __me">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam iure iste, placeat perferendis soluta velit rem cupiditate amet! Deleniti placeat eligendi, nesciunt quis velit obcaecati fugiat excepturi inventore animi maxime.
+                        
+                            <p class="check">&#10003;&#10003;</p>
+                        </div>
+                        
 
+                        
                     </div>
                     
                 </div>
@@ -170,7 +177,7 @@ body {
 }
 
 .messanger-block {
-    display: none;
+    /* display: none; */
     position: fixed;
     right: 0;
     flex-direction: column;
@@ -210,6 +217,8 @@ body {
 }
 
 .message {
+    position: relative;
+
     max-width: 49%;
     border-radius: 10px;
     background-color: #1f1e1e;
